# cbs

./: .editorconfig  .gitignore  .lefthook.yaml  .markdownlint-cli2.jsonc  .prettierignore  CLAUDE.md  ContainerFile.cbs  ContainerFile.cbs-dev  README-cbs.md  README-crt.md  README.md  do-cbs-compose.sh  do-cbsd-rs-compose.sh  install-deps.sh  lima-cbs.yaml  podman-compose.cbs-dev.yaml  podman-compose.cbs.yaml  podman-compose.cbsd-rs.yaml  podman-compose.yaml  pyproject.toml  pyrightconfig.json
cbc/: .gitignore  README.md  pyproject.toml
cbc/tools/: build.sh
cbs/: .gitignore  ContainerFile  cbc.py  cbs-runner-entrypoint.sh  cbs-server.py  cbs.config.server.example.json  cbs.config.worker.example.json  cbs.server.config.example.yaml  cbs.vault.example.json  cbs.worker.config.example.yaml  ceph-release-tool.py  ces-build-server.py  ces-build.py  image-tool.py  pyproject.toml  pyrightconfig.json  secrets.example.json  secrets.example.yaml  versions.py
cbs/cbslib/: __init__.py  logger.py
cbscommon/: README.md  pyproject.toml
cbscore/: pyproject.toml
cbscore/examples/: cbs-build.config.example.yaml  cbs-build.vault.yaml  secrets.example.yaml
cbsd/: cbc.py  cbs-server.py  cbsd.server.config.example.yaml  cbsd.worker.config.example.yaml  entrypoint-dev.sh  gen-reqs.sh  nginx-dev.conf  nginx-landing.html  pyproject.toml  pyrightconfig.json
cbsd-rs/: .gitignore  CLAUDE.md  Cargo.toml  README.md
cbsd-rs/.sqlx/: query-03730ca41b30325065815d5c3b4b6d094bcf9c894002c3f7e3fe7b24e8a9ccf9.json  query-03cedb02255dcc4684e67be089dd7e7db23ec954e6287ffc202fc0f52851c4db.json  query-06350018eda97e29cdd02f52f2669363f6c4b402e403b6bf846362d12aa2570b.json  query-07055fab4cb4fd85c768b8d3fe432d031d2811b228766df75b5869d0c34ecc6e.json  query-07fd79ec6b7bcc0c7021daadf3ef904ce248d1e348c0dd52dee6f9887c709d46.json  query-081870027b8439e931d68f01ed9c695d5e09b90f436cd191fb7c01961e04d137.json  query-09017a931ff6aa46d2a4dcae277c58194eb8ffdb817b35fc7aaeba66e6ddb8fe.json  query-096a349240724e94f7190ad0ba383f340379d529c61b2754ec213052110b32ba.json  query-096e4514d5b97e4de8a19bfdd7cbf983cb50e1b1b9c775759ec512131a2e9845.json  query-0efc5035e8ecd48e8e978d101069199180ff7504428bc3328c53fd356fa0115f.json  query-11d2567c8982c88755139d703fcc77c9ce4c39b0394705b118b5fb90f077419c.json  query-12bfb014347fef713d5eb004cbdbcb0f917d848a4cb2ccff3e5e148d66cb68f5.json  query-1422a2a590d7d17372d66213b1250d377293bc1c6f9da0d2931b46638fd6d7ed.json  query-1465c3182417b5f06c3d82806f00b9dce803a0bb22988c04c770a6905aa72dd3.json  query-152f633b775233d25a44499836b58d06802cd8f03157c380de595db3695ea1b5.json  query-154df6f020852cd6a17e99ed626f24cc6431b79474d3ff5af75bd1cfed50a1ea.json  query-17f8d5c569a41b92671d3916834a2b74f380a7beff26c1571861f23748049bfa.json  query-1a4f77e77dfaf98105aedad40cb214a83fdc7ec7b4c05a5b45c86282a70dabb2.json  query-1b08f25bafbcab7e95a9bae0080719247ed566c816c2a7e89ba427a3cb7a604c.json  query-1f1941cf30f5f89c77f26bbc93858e875c994046a13512229f02b5f469c6c9ee.json  query-1fbc1a42122eee93246be3cac94db337958426a762c216554268ad81e22754ba.json  query-21353b505c98a2d873fa3d60c753208a57502b91cd0d570dc764b40c2e5522e3.json  query-21e262430b73d5f02b8ff2639551c7cb9078e5909d2a5a427be4bfc740a4cccf.json  query-265f513f631d20825807c98f188e2d54a86ee6f2ff9060b9f749d4460f38eae0.json  query-277adc28420c70ae2ec151e975578848dbd76244caade03fb728e07571e301a0.json  query-2a44aa33e406fea2fa85803be80e2b39ec9cefa29ecebcb07ea662e574e75bb4.json  query-2b0f3d2593bf171dd02b203b669ebfb11bad0f9a3198aa92f9b99dd736a22f38.json  query-2b8f6a026068d95ca448a45ce4fe288058d52382e5abffbf645063a857b4939a.json  query-2d95c2d3224e2dd0fd032b31851428376f1eec7b28b130e1638b38bad8f78566.json  query-2ddbd944a3fc80fbd3a524753e3a1e67d896dcbc8f74fea41ec1c7950a641e47.json  query-2e5bb618f1470d9b3e6deaa989e5889741f5d37892914c8bf0d1f10ff139294f.json  query-2e6017c87e3215fcab323d2b53a08b0d7117a7052d036147f44c9f7ec50b4365.json  query-32d0ed8cb8d3492001ddfd03ad54ed65b23f40800652dfcabcf90ed8647b4456.json  query-34c90e9cc59925e723569ba7228dfe1a695e2301d1db189a60c1f7bddf4bc630.json  query-35335895f896760c6b45af1a025507ead143e6ea664e154437707905d4a3e9c5.json  query-356a7d18e0f4478a3254f818465352bb35db5ad9e2ad52e8873d6f5354f7c8e8.json  query-373f4bf5be457b6e5c2b2744417d089783f8b13a6636818147d1752bc9909632.json  query-37f28282f472c86bfc272eca81e8d76a24e1da1d903e42561a8558d910af4293.json  query-3bf3d44455b44bd61c1ca5e2c9c1f33ce0dd700704633a5c8babf715114965b8.json  query-3c79e83c91a480f124aa542297a44cb7ee6760f94ab032d45e3a2eed968d2d35.json  (+119 more)
cbsd-rs/cbc/: Cargo.toml  build.rs
cbsd-rs/cbsbuild/: Cargo.toml  build.rs
cbsd-rs/cbscore/: Cargo.toml
cbsd-rs/cbscore-types/: Cargo.toml
cbsd-rs/cbsd-common/: Cargo.toml
cbsd-rs/cbsd-proto/: Cargo.toml
cbsd-rs/cbsd-server/: Cargo.toml  build.rs
cbsd-rs/cbsd-worker/: Cargo.toml
cbsd-rs/config/: server.example.yaml  server.yaml.example  worker.example.yaml  worker.yaml.example
cbsd-rs/crt/: Cargo.toml  README.md  crt.config.yaml.example  crt.secrets.yaml.example
cbsd-rs/crt-core/: Cargo.toml
cbsd-rs/crt-store/: Cargo.toml
cbsd-rs/docs/: CLAUDE.md  README.md  ROADMAP.md  rbac.md  ui-integration.md
cbsd-rs/migrations/: 001_initial_schema.sql  002_worker_registration.sql  003_periodic_tasks.sql  004_build_report.sql  005_channels.sql  006_token_usage.sql  007_robot_accounts.sql  009_api_key_prefix_index.sql
cbsd-rs/misc/: Caddyfile.dev  ContainerFile.caddy
cbsd-rs/scripts/: cbscore-wrapper.py
cbsd-rs/systemd/: cbsd-rs-ctr.sh  gen-config-archive.sh  install.sh
cbsd-rs/ui/: COPYING  README.md  cbsd-rs-ui.sh  global.d.ts  helpers.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json
cbsd/cbslib/: logger.py
cbsd/tests/: __init__.py  conftest.py  test_auth.py  test_permissions.py
cbsd/ui/: vite.config.ts
cbsdcore/: README.md  pyproject.toml
crt/: .gitignore  ceph-release-tool.py  crt.env.example  crt.py  pyproject.toml
crt/cmds/: __init__.py  _common.py  crt.py  db.py  manifest.py  patch.py  patchset.py  release.py  stages.py
crt/crtlib/: __init__.py  apply.py  db.py  errors.py  git.py  github.py  (+8 more)
(+877 files in other folders)
