[project]
name = "ces"
version = "0.0.0"
description = "Clyso Enterprise Storage main project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.29.5",
]

[tool.uv.workspace]
members = ["cbs", "cbs/packages/ceslib", "crt"]

[dependency-groups]
dev = ["basedpyright>=1.29.0", "lefthook>=1.11.11", "ruff>=0.11.8"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E", # errors
  "W", # warnings
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pep8 naming
  "N",
  # pydocstyle
  "D",
  "D211",
  "D213",
  # ruff-specific
  "RUF",
  # tryceratops
  "TRY",
  # flake8-executable
  "EXE",
  # flake8-datetimez
  "DTZ",
  # flake8-copyright notice
  # "CPY",
  # flake8-comprehensions
  "C4",
  # flake8-commas
  "COM",
  # flake8-blind-except
  "BLE",
  # flake8-bandit
  "S",
]
ignore = [
  "D10",    # missing docstring in public modules, etc
  "D203",   # mutually exclusive with D211
  "D212",   # mutually exclusive with D213
  "COM812", # ignore missing trailing comma
  "CPY001", # missing copyright notice
  "S101",   # use of assert
  "BLE001", # ignore bling exceptions
  "TRY003", # avoid long messages outside exception class
  "TRY400", # ignore using 'exception' logging instead of 'error'
]

# [tool.basedpyright]
# pythonVersion = "3.13"
# typeCheckingMode = "all"
# exclude = ["**/__pycache__", "**/.venv", "./local/", "**/venv"]
# baselineFile = ".basedpyright/baseline.json"
