[project]
name = "clyso-cbs"
version = "1.0.4"
description = "Clyso Enterprise Storage Build Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbscore",
]

[tool.uv.workspace]
members = ["cbscore", "cbsdcore", "cbsd", "cbc", "crt"]

[tool.uv.sources]
cbscore = { workspace = true }

[dependency-groups]
dev = ["basedpyright==1.37.1", "lefthook==2.0.15", "ruff==0.14.13"]
test = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cbsd/tests", "tests/integration"]
addopts = """
    --cov=cbc
    --cov=cbscore
    --cov=cbsd
    --cov=cbsdcore
    --cov=crt
    --cov-report=term-missing
    --cov-report=html:reports/coverage
    --cov-report=xml:reports/coverage.xml
"""
markers = [
    "version: custom version for the test component ",
    "container_name: name of the container image",
    "container_tag: version tag used for the registry"
]

[tool.coverage.run]
source = ["cbc", "cbscore", "cbsdcore"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E", # errors
  "W", # warnings
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pep8 naming
  "N",
  # pydocstyle
  "D",
  "D211",
  "D213",
  # ruff-specific
  "RUF",
  # tryceratops
  "TRY",
  # flake8-executable
  "EXE",
  # flake8-datetimez
  "DTZ",
  # flake8-copyright notice
  # "CPY",
  # flake8-comprehensions
  "C4",
  # flake8-commas
  "COM",
  # flake8-blind-except
  "BLE",
  # flake8-bandit
  "S",
]
ignore = [
  "D10",    # missing docstring in public modules, etc
  "D203",   # mutually exclusive with D211
  "D212",   # mutually exclusive with D213
  "COM812", # ignore missing trailing comma
  "CPY001", # missing copyright notice
  "S101",   # use of assert
  "BLE001", # ignore bling exceptions
  "TRY003", # avoid long messages outside exception class
  "TRY400", # ignore using 'exception' logging instead of 'error'
]

# [tool.basedpyright]
# pythonVersion = "3.13"
# typeCheckingMode = "all"
# exclude = ["**/__pycache__", "**/.venv", "./local/", "**/venv"]
# baselineFile = ".basedpyright/baseline.json"
