[project]
name = "cbs"
version = "0.1.0"
description = "CES Build Service"
authors = [{ name = "Joao Eduardo Luis", email = "joao@clyso.com" }]
requires-python = ">=3.13"
dependencies = [
    "aioboto3==13.3.0",
    "aiohttp==3.11.15",
    "authlib==1.5.1",
    "celery==5.5.0rc5",
    "click==8.1.8",
    "fastapi==0.115.11",
    "flower==2.0.1",
    "httpx==0.28.1",
    "hvac==2.3.0",
    "itsdangerous==2.2.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyseto==1.8.3",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "types-aioboto3[full]==13.3.0.post1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "celery-types==0.23.0",
    "ruff>=0.11.8",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
