[project]
name = "cbscommon"
version = "0.1.0"
description = "Common utilities and shared modules for cbs"
readme = "README.md"
authors = [
    { name = "Uwe Schwaeke", email = "uwe.schwaeke@clyso.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
