[project]
name = "cbscore"
version = "1.0.0"
description = "Clyso Build System core library"
readme = "README.md"
authors = [{ name = "Joao Eduardo Luis", email = "joao@clyso.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
  "aioboto3==13.3.0",
  "aiofiles>=25.1.0",
  "click>=8.1.8",
  "hvac>=2.3.0",
  "pydantic>=2.11.6",
  "pyyaml>=6.0.2",
  "types-aioboto3[full]==13.3.0.post1",
]

[project.scripts]
cbsbuild = "cbscore.__main__:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
