[workspace]
members = ["cbsd-common", "cbsd-proto", "cbsd-server", "cbsd-worker", "cbc", "crt-core", "crt-store", "crt"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/clyso/cbs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
secrecy = "0.10"
