[project]
name = "crt"
version = "0.1.0"
description = "Ceph Release Tool"
authors = [{ name = "Joao Eduardo Luis", email = "joao@clyso.com" }]
requires-python = ">=3.13"
dependencies = [
    "boto3==1.35.81",
    "cbscore",
    "click>=8.1.8",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "types-boto3[s3]==1.35.81",
    "types-pyyaml>=6.0",
]

[project.scripts]
crt = "crt.cmds.crt:cmd_crt"

[tool.uv.sources]
cbscore = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
