[package]
name = "cbc"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "CBS build service CLI client"

[dependencies]
cbsd-proto = { path = "../cbsd-proto" }
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
url = "2"
dirs = "5"
open = "5"
reqwest-eventsource = "0.6"
futures-util = "0.3"
