[package]
name = "cbscore-types"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "Zero-IO wire types and constants for the cbscore Rust port"

[dependencies]
camino = "1"
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
