[package]
name = "cbscore"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "CES Build System core build library (cbscore Rust port)"

[dependencies]
cbscore-types = { path = "../cbscore-types" }
# S3 client (design 005). default-features off so aws-sdk-s3's
# `default-https-client` (which links aws-lc-rs) stays out; the ring-backed
# rustls connector is built explicitly via aws-smithy-http-client, matching the
# C0 musl-probe (no openssl-sys, no aws-lc-rs).
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
aws-smithy-http-client = { version = "1", default-features = false, features = [
    "rustls-ring",
] }
camino = "1"
chrono = { workspace = true }
rand = "0.9"
regex = "1"
serde = { workspace = true }
serde-saphyr = "0.0.26"
serde_json = { workspace = true }
serde_yaml_ng = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "process",
    "io-util",
    "time",
    "fs",
    "rt",
    "macros",
] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v7"] }
# Vault client (design 004). `rustls` only — the musl-clean ring-backed reqwest
# stack the C0 musl-probe proved links static (no openssl-sys, no aws-lc-rs).
vaultrs = { version = "0.7", default-features = false, features = ["rustls"] }
