[package]
name = "cbsd-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CBS build service daemon — server binary"

[dependencies]
cbsd-proto = { path = "../cbsd-proto" }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
