[package]
name = "cbsd-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CBS build service daemon — server binary"

[dependencies]
cbsd-proto = { path = "../cbsd-proto" }
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
croner = "3"
flate2 = "1"
futures-util = "0.3"
hkdf = "0.12"
lru = "0.12"
pasetors = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tar = "0.4"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
tower_governor = "0.4"
tower-sessions = { version = "0.13", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
