[package]
name = "cbsd-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CBS build service daemon — worker binary"

[dependencies]
cbsd-proto = { path = "../cbsd-proto" }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
