[package]
name = "cbsd-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CBS build service daemon — worker binary"

[dependencies]
cbsd-proto = { path = "../cbsd-proto" }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures-util = "0.3"
http = "1"
libc = "0.2"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
