[package]
name = "crt-core"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "CRT core: content-addressing, manifest, sealing (no IO)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# RFC 8785 (JCS) canonical JSON — the signed-manifest byte contract (design §6).
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
# Detached OpenPGP signing/verification (design §6). Pure-Rust; default features
# off to drop the bzip2 C dependency (compression is unused for detached sigs).
pgp = { version = "0.19", default-features = false }
# RNG traits for the signing API. crt-core names the bound but never sources
# entropy itself — the caller injects the RNG, keeping the crate pure.
rand = "0.8"
