[package]
name = "crt-core"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "CRT core: content-addressing, manifest, sealing (no IO)"

[dependencies]
serde = { workspace = true }
# Pinned EXACT (v5-review F2): `build_sbom` emits `sbom.cdx.json` via
# `serde_json::to_string_pretty`, and verify leg 4 byte-compares the committed
# SBOM against a re-derivation. A pretty-printer change across crt builds would
# desync that compare, so the linked version is fixed (mirrors the `minijinja`
# pin below; the committed SBOM byte golden in src/sbom.rs is the CI tripwire).
serde_json = "=1.0.149"
# RFC 8785 (JCS) canonical JSON — the signed-manifest byte contract (design §6).
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
# Detached OpenPGP signing/verification (design §6). Pure-Rust; default features
# off to drop the bzip2 C dependency (compression is unused for detached sigs).
pgp = { version = "0.19", default-features = false }
# RNG traits for the signing API. crt-core names the bound but never sources
# entropy itself — the caller injects the RNG, keeping the crate pure.
rand = "0.8"
# Release-notes rendering (design §7.2). Pure-Rust, no C/tokio — safe in the
# no-IO core. Pinned EXACT: `RENDER_MINIJINJA_VERSION` (src/notes.rs) is sealed
# into every manifest's RenderSpec and gated at render/verify, so the linked
# version must equal that constant — a bump must edit BOTH this line and the
# constant. Defaults give `builtins` (groupby/title) + `serde` (from_serialize).
minijinja = "=2.21.0"
