[package]
name = "crt"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "Ceph Release Tool v2 (CLI)"

[dependencies]
crt-core = { path = "../crt-core" }
crt-store = { path = "../crt-store" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_yml = "0.0.13"

[dev-dependencies]
tempfile = "3"
