[package]
name = "crt"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "Ceph Release Tool v2 (CLI)"

[dependencies]
crt-core = { path = "../crt-core" }
crt-store = { path = "../crt-store" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { workspace = true }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { workspace = true }
serde_yml = "0.0.13"
tempfile = "3"
# Default features use the rustls stack (matches object_store), not openssl.
octocrab = "0.53"
# Pin `ring` as the process-wide rustls crypto provider (installed in main): a
# permanent guard so a future dependency re-introducing a second provider can't
# make rustls 0.23 refuse to auto-select and panic. `default-features = false`
# so crt itself never requests the aws-lc-rs provider.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# `rustls-no-provider` (not `rustls`) keeps aws-lc-rs — a C/cmake build
# dependency — out of the tree: the crypto provider is the `ring` one pinned
# above and installed in main, not aws-lc-rs.
vaultrs = { version = "0.8", default-features = false, features = ["rustls-no-provider"] }
# Public-key fetch for `release verify`; rustls, reuses octocrab's reqwest 0.12.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
# Generate a throwaway signing keypair for the seal-pipeline tests.
pgp = { version = "0.19", default-features = false }
rand = "0.8"
